Add Tailwind CSS integration and update configuration files
- Added Tailwind CSS and its Vite plugin as dependencies in package.json and package-lock.json.
- Updated astro.config.mjs to include Tailwind CSS in the Vite plugins.
- Modified .gitignore to exclude .vscode directory.
- Refactored ThemeIcon component for improved theme handling.
- Cleaned up global CSS by integrating Tailwind CSS styles.
- Adjusted import statements for consistency across components and pages.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@astrojs/preact": "^4.0.6",
     "@astrojs/rss": "^4.0.11",
+    "@tailwindcss/vite": "^4.0.17",
     "astro": "^5.5.4",
-    "preact": "^10.26.4"
+    "preact": "^10.26.4",
+    "tailwindcss": "^4.0.17"
   }
 }
