--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,11 @@
 {
-  "printWidth": 120,
-  "singleAttributePerLine": false,
-  "htmlWhitespaceSensitivity": "strict",
-  "bracketSameLine": true
+  "plugins": ["prettier-plugin-astro"],
+  "overrides": [
+    {
+      "files": "*.astro",
+      "options": {
+        "parser": "astro"
+      }
+    }
+  ]
 }
